mission title content

--- a/html/index.html
+++ b/html/index.html
@@ -36,7 +36,7 @@
                         <div class="item-main row">
                             <div class="col-12 node-mobile" data-child="dyn-title1">
                                 <div class="dyn-node" data-node="dyn-title1">
-                                    <h3 class="title fs1820 c0">無任務列表-觀看兩則廣告可得Hami point 1點</h3>
+                                    <h3 class="title fs1820 c0">無任務列表-每觀看1則廣告可得Hami point 0.2點</h3>
                                 </div>
                             </div>
                             <a class="figure" href="mission-video.html" title="">
@@ -107,7 +107,7 @@
                         <div class="item-main row">
                             <div class="col-12 node-mobile" data-child="dyn-title2">
                                 <div class="dyn-node" data-node="dyn-title2">
-                                    <h3 class="title fs1820 c0">當任務已完成-無任務列表-觀看兩則廣告可得Hami point 1點</h3>
+                                    <h3 class="title fs1820 c0">當任務已完成-無任務列表-每觀看1則廣告可得Hami point 0.2點</h3>
                                 </div>
                             </div>
                             <a class="figure" href="mission-video.html" title="">
@@ -280,7 +280,7 @@
                         <div class="item-main row">
                             <div class="col-12 node-mobile" data-child="dyn-title5">
                                 <div class="dyn-node" data-node="dyn-title5">
-                                    <h3 class="title fs1820 c0">觀看兩則廣告可得Hami point 1點</h3>
+                                    <h3 class="title fs1820 c0">觀看1則廣告可得Hami point 0.2點</h3>
                                 </div>
                             </div>
                             <a class="figure" href="mission-list.html" title="">
