--- a/html/mission-list.html
+++ b/html/mission-list.html
@@ -29,7 +29,7 @@
         
     <div class="mission-list pd1 sy1">
         <div class="w08 r1020 pd1 sy2 mb3 lb4">
-            <h1 class="tc fs1820 fw5 c0">觀看兩則廣告可得 Hami point 1點</h1>
+            <h1 class="tc fs1820 fw5 c0">觀看1則廣告可得Hami point 0.2點 or 每觀看一篇文章得0.1點</h1>
             <div class="list list01 row fjcc sy1 mb2">
                 <ol class="fs1416 fw4">
                     
