--- a/html/mission-video-ok.html
+++ b/html/mission-video-ok.html
@@ -39,9 +39,9 @@
             <div class="tc pd1 sy1">
                 <h1 class="tc fs2530 fw5 c0 sb1">恭喜您已完成任務流程</h1>
                 <!-- 無任務列表 -->
-                <a class="btn02 fw7" href="index.html" title="點我取點並返回">點我取點並返回</a>
+                <a class="btn02 fw7" href="index.html" title="點我取點並返回">點我取點並返回(無任務列表,回到任務牆)</a>
                 <!-- 有任務列表 -->
-                <a class="btn02 fw7" href="mission-list.html" title="返回上頁取點">返回上頁取點</a>
+                <a class="btn02 fw7" href="mission-list.html" title="返回上頁取點">返回上頁取點(回到任務列表)</a>
             </div>
         </div>
     </div>
