--- a/html/mission-list.html
+++ b/html/mission-list.html
@@ -192,7 +192,7 @@
         <div class="row faic fs1214">
             <div class="col-12 col-md-10 col-lg-11 cf mr1">
                 我們紀錄 cookie 資訊，以提供客製化內容，可優化您的使用體驗，若繼續閱覽本網站內容，即表示您同意我們使用 cookies。
-                更多關於<a class="color3 fw5" href="https://mission-wall.devsg.openlife.co/privacy" target="_blank" title="隱私保護資訊，">隱私保護資訊，</a>
+                更多關於<a class="color3 fw5" href="privacy.html" target="_blank" title="隱私保護資訊，">隱私保護資訊，</a>
             </div>
             <div class="col-12 col-md-2 col-lg-1 tc st1 mt0">
                 <button class="btn01 cf" onclick="acceptGDPR()">瞭解</button>
