--- a/html/mission-video.html
+++ b/html/mission-video.html
@@ -74,7 +74,7 @@
                     <div class="fs1820">請點擊下方有興趣廣告</div>
                 </div>
                 <div class="miission-clik off">
-                    <a  href="mission-video-ok.html" title="廣告名稱">
+                    <a  href="mission-ok.html" title="廣告名稱">
                         <img src="https://ad.newaddiscover.com/ad/images//29dffddc90ba2eebb4f089478e562c17.jpg" alt="廣告名稱" loading="lazy">
                     </a>
                 </div>
