--- a/html/mission-video-ok.html
+++ b/html/mission-video-ok.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@300;400;500;700&display=swap" rel="stylesheet">    
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
-    <link href="../css/style.css?v=20240314" rel="stylesheet" type="text/css">
+    <link href="../css/style.css?v=20240409" rel="stylesheet" type="text/css">
     <link rel="shortcut icon" href="../images/favicon.ico">
     <link rel="apple-touch-icon" href="../images/apple-touch-icon.png">
 </head>
@@ -39,6 +39,31 @@
                 <a class="btn02 fw7" href="mission-list.html" title="返回上頁取點">返回上頁取點(回到任務列表)</a>
             </div>
         </div>
+        <div class="ad-wrap st1 mt2">
+    <div class="w08">
+        <!--如果是影片-->
+        <div class="tr fs16">贊助商</div>
+        <div class="video-wrap r1020">
+            <video width="" height="" title="" preload="none" autoplay="" muted="" playsinline="" loop="">
+                <source src="../images/video.mp4" type="video/mp4">
+            </video>
+        </div>
+        <!--如果是圖片-->
+        <div class="tr fs16">贊助商</div>
+        <div class="row ig01">
+            <div class="col">
+                <a class="d-block r1020" href="#" target="_blank" title="">
+                    <img src="../images/figure06.jpg" alt="">
+                </a>
+            </div>
+            <div class="col">
+                <a class="d-block r1020" href="#" target="_blank" title="">
+                    <img src="../images/figure06.jpg" alt="">
+                </a>
+            </div>
+        </div>
+    </div>
+</div>
     </div>
 
     </main>
