--- a/html/mission-list.html
+++ b/html/mission-list.html
@@ -186,7 +186,7 @@
         <!--如果是影片-->
         <div class="tr fs16">贊助商</div>
         <div class="video-wrap r1020">
-            <video width="" height="" title="" preload="none" autoplay="" muted="" playsinline="" loop="">
+            <video controls width="" height="" title="" preload="none" autoplay="" muted="" playsinline="" loop="">
                 <source src="../images/video.mp4" type="video/mp4">
             </video>
         </div>
